@@ -3,7 +3,7 @@ package chapter13.dailyquiz;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 public class PrintMoreBigNumberStream {
 	//N(1<=N<=100)개의 정수를 입력받아, 자신의 바로 앞 수보다 큰 수만 출력하는 프로그램
@@ -13,11 +13,12 @@ public class PrintMoreBigNumberStream {
 
 		answer.add(array[0]);
 
-		for (int i = 1; i < n; i++) {
-			if (array[i - 1] < array[i])
-				answer.stream().collect(Collectors.toList());
-		}
+		List<Integer> collect = IntStream.range(1, n)
+			.filter(index -> array[index] > array[index - 1])
+			.mapToObj(x -> array[x])
+			.toList();
 
+		answer.addAll(collect);
 		return answer;
 	}
 
